# duck-blog

./: .gitignore  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
apps/acme-server/: Cargo.toml  package.json
apps/acme-server-rs/: Cargo.toml  note.md
apps/acme-server-rs/migrations/: batman.sql
apps/acme-server-rs/src/: main.rs
apps/acme-server-rs/src/auth/: constants.rs  dto.rs  mod.rs  service.rs  types.rs
apps/acme-server-rs/src/common/: mod.rs
apps/acme-server-rs/src/common/validators/: mod.rs
apps/acme-server-rs/src/email/emails/: mod.rs  welcome_email.rs
apps/acme-server-rs/src/redis/: mod.rs
apps/acme-server-rs/src/sqlx/: mod.rs
apps/acme-server-rs/src/user/: constants.rs  dto.rs  mod.rs  service.rs  types.rs
apps/acme-server-rs/templates/: update_user_info.html  welcome_email.html
apps/acme-server/migrations/: batman.sql
apps/acme-server/src/: main.rs
apps/acme-server/src/auth/: auth.controller.ts  constants.rs  dto.rs  guard.rs  mod.rs  service.rs
apps/acme-server/src/common/: mod.rs
apps/acme-server/src/common/functionalities/: api_res.rs  mod.rs
apps/acme-server/src/common/generators/: code.rs
apps/acme-server/src/email/: mod.rs
apps/acme-server/src/otp_code/: constants.rs  mod.rs  service.rs  types.rs
apps/acme-server/src/user/: constants.rs  dto.rs  mod.rs  service.rs
apps/acme-server/src/words/: constants.rs  dto.rs  libs.rs  mod.rs  service.rs  types.rs
apps/acme-server/templates/: account-verification.html  event-invitation.html  feedback-request.html  new_sign_in.html  newsletter.html  order-confirmation.html  password-reset.html  promotional-discount.html  reengagement-winback.html  shipping-notification.html  welcome_email.html
(+17 files in other folders)
