[package]
name = "acme-server-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.11.0"
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"] }
actix-session = { version = "0.8.0", features = ["redis-rs-tls-session"] }
actix-identity = "0.9.0"
validator = { version = "0.16.0", features = ["derive"] }
bcrypt = "0.17.1"
